Fix overlay on small screens

--- a/style.css
+++ b/style.css
@@ -799,7 +799,7 @@ a:focus {
 	padding-top: 90px;
 	padding-left: 30px;
 	padding-right: 30px;
-	z-index: 1;
+	z-index: 2;
 }
 .section-video-overlay h1 {
 	font-size: 40px;
